@@ -8,6 +8,9 @@ Zope Changes
 
    Bugs fixed
 
+      - Launchpad #239636:  Ensure that HEAD requests lock an empty body
+        for NotFound errors.
+
       - Launchpad #234209: De-tabify ZPublisher/HTTPRequest.py
 
   Zope 2.9.9 (2008/05/10)
